# bumblebee

./: .gitignore  requirements.txt  setup.cfg
src/bumblebee/: cli.py
src/bumblebee/configs/: __init__.py  trainer_args.py
src/bumblebee/registry/: __init__.py  dataloader.py  distributed.py  lr_scheduler.py  optimizer.py  snapshot.py  tracer.py  tuner.py
src/bumblebee/scripts/: train.py
src/bumblebee/trainer/: __init__.py  trainer.py
src/bumblebee/tuners/: __init__.py  lora.py  tuner_utils.py
src/bumblebee/utils/: __init__.py  import_utils.py  io.py  trainer_utils.py  typology.py
