[metadata]
name = bumblebee
version = 0.1.0
description = Train large model simply.
long_description = file: README.md
long_description_content_type = text/markdown
author = E Ning
author_email = blurmemo@gmail.com
license_file = LICENSE


[options]
package_dir =
    =src
packages = find:

[options.packages.find]
where = src
exclude =
    tests*

[options.entry_points]
console_scripts =
    bumblebee = bumblebee.cli:main